--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 # v0.1.0.1 - 8-30-2025
-- Update to SlickQueue v1.0.0.1
+- Update to SlickQueue v1.0.0.2
 - Add CHANGELOG
 - Fix examples build
 - Log version on start
+- Add installation rules for include directory and custom targets for automated distribution and packaging in Release mode.
