Add sink enhancements for v0.1.0.3
- Add get_sink<SinkT> to Logger for type-based sink access
- Enhance DailyFileSink with size-based rotation
- Improve README with std::format examples and requirements
- Update tests for new sink functionalities and version bump to 0.1.0.3

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+# v0.1.0.3 - 09-08-2025
+- Add file_path() getter to FileSink for path retrieval
+- Add get_sink<SinkT> to Logger for retrieving sinks by type
+- Update CMakeLists.txt to auto-generate header with warning messages from src/logger.hpp
+- Modify src/logger.hpp to include SinkType and type methods, using @WARNING_MESSAGE@ placeholder for auto-generation
+- Modified DailyFileSink to also support size based rotation.
+
 # v0.1.0.2 - 09-03-2025
 - Replace raw pointers with std::unique_ptr for SlickQueue to ensure automatic memory cleanup  
 - Add shutdown() calls in init() functions to safely stop the logger before re-initialization  
