--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+# v1.0.0.7 - 10-21-2025
+- Update slick_queue to v1.1.0.1
+- Change namespace from slick_logger to slick::logger
+
 # v1.0.0.6 - 10-14-2025
 - Update slick_queue to v1.1.0.0
 - Added GitHub CI workflow for automated testing across Ubuntu, Windows, and macOS
