--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+# v1.0.0.8 - 10-21-2025
+- Update slick_queue to v1.1.0.2
+- Change include folder from include/slick_logger to include/slick
+
 # v1.0.0.7 - 10-21-2025
 - Update slick_queue to v1.1.0.1
 - Change namespace from slick_logger to slick::logger
